Edited wiki page through web user interface.

--- a/wiki/Summary.wiki
+++ b/wiki/Summary.wiki
@@ -1,7 +1,7 @@
 #summary Summary of the open-mc13224v project
 = Introduction =
 
-The goal of the `open-mc13224v` project is too provide an easy way to start development of applications for the Freescale MC13224V chip.
+The goal of the `open-mc13224v` project is to provide an easy way to start development of applications for the Freescale MC13224V chip.
 
 It provides:
  * a set of source files to build basic applications for the chip
