--- a/wiki/RomRetroEngineering.wiki
+++ b/wiki/RomRetroEngineering.wiki
@@ -1,8 +1,12 @@
-#summary Portions of code that were retro engineered from the ROM
+#summary Portions of code that were retro engineered from the ROM 2.1
 #labels Phase-Implementation
 
-List of functions/processes that were retro engineered from the ROM content:
+Elements that were retro engineered from the ROM content:
  * Boot code : RetroBootCode
- * `FlashLib_Read()` : RetroFlashLib_Read
- * `NVM_SetSVar()` : RetroNvmSetSvar
- * `NVM_Detect()` : RetroNvmDetect
+ * functions published in the ROM interface:
+  * `NVM_SetSVar()` : RetroNvmSetSvar
+  * `NVM_Detect()` : RetroNvmDetect
+ * functions not published in the ROM interface but that have a published name in the library file:
+  * `FlashLib_Read()` : RetroFlashLib_Read
+ * functions not published in the ROM interface and that have no library name (ROM address is provided and name is invented by me):
+  * `0x70c4 = NVM_GetBaseAddr()` : RetroNvmGetBaseAddr
