--- a/wiki/RetroNvmDetect.wiki
+++ b/wiki/RetroNvmDetect.wiki
@@ -18,47 +18,77 @@ nvmErr_t NVM_Detect(nvmInterface_t nvmInterface, nvmType_t* pNvmType)
     *pNvmType = 0;
 0x00006cc8:      00 20  movs    r0, #0
 0x00006cca:      28 70  strb    r0, [r5, #0]
-    if (NVM_GetBaseAddr(nvmInterface, &baseAddr))
+    if (NVM_GetBaseAddr(nvmInterface, &baseAddr) != 0)
 0x00006ccc:      69 46  mov     r1, sp
 0x00006cce:      20 00  lsls    r0, r4, #0
-0x00006cd0:      00 f0 f8 f9    bl      0x70c4 (static function)
+0x00006cd0:      00 f0 f8 f9    bl      0x70c4
 0x00006cd4:      00 28  cmp     r0, #0
 0x00006cd6:      01 d0  beq.n   0x6cdc
+    {
+        return 1;
 0x00006cd8:      01 20  movs    r0, #1
 0x00006cda:      3e e0  b.n     0x6d5a
+    }
+    if (pNvmType == NULL)
+    {
+        return 3;
+    }
 0x00006cdc:      00 2d  cmp     r5, #0
 0x00006cde:      01 d1  bne.n   0x6ce4
 0x00006ce0:      03 20  movs    r0, #3
 0x00006ce2:      3a e0  b.n     0x6d5a
+    if (nvmInterface == 0)
 0x00006ce4:      00 2c  cmp     r4, #0
 0x00006ce6:      07 d1  bne.n   0x6cf8
+    {
+        uint32_t reg;
+        reg = REG(0x80003048); 
 0x00006ce8:      a5 48  ldr     r0, [pc, #660]  ; (0x6f80)
 0x00006cea:      00 68  ldr     r0, [r0, #0]
+        if ((reg & VREG_1P8V_EN) == 0)
 0x00006cec:      80 21  movs    r1, #128        ; 0x80
 0x00006cee:      01 40  ands    r1, r0
 0x00006cf0:      c8 09  lsrs    r0, r1, #7
 0x00006cf2:      01 d1  bne.n   0x6cf8
+        {
 0x00006cf4:      09 20  movs    r0, #9
 0x00006cf6:      30 e0  b.n     0x6d5a
+            return 9;
+        }
+    }
+    // force SS high (to reset state machine)
+    REG(baseAddr + 0xC) = 3;
 0x00006cf8:      03 24  movs    r4, #3
 0x00006cfa:      00 98  ldr     r0, [sp, #0]
 0x00006cfc:      c4 60  str     r4, [r0, #12]
+    // force SS auto
+    REG(baseAddr + 0xC) = 1;
 0x00006cfe:      01 27  movs    r7, #1
 0x00006d00:      00 98  ldr     r0, [sp, #0]
 0x00006d02:      c7 60  str     r7, [r0, #12]
+    // call function
+    70a0(baseAddr, 0x90000000, 0x000027a0)
 0x00006d04:      16 4a  ldr     r2, [pc, #88]   ; (0x6d60)
 0x00006d06:      90 21  movs    r1, #144        ; 0x90
 0x00006d08:      09 06  lsls    r1, r1, #24
 0x00006d0a:      00 98  ldr     r0, [sp, #0]
 0x00006d0c:      00 f0 c8 f9    bl      0x70a0
+    // read the received byte
+    reg = REG(baseAddr+4) & 0xFF
 0x00006d10:      ff 26  movs    r6, #255        ; 0xff
 0x00006d12:      00 98  ldr     r0, [sp, #0]
 0x00006d14:      40 68  ldr     r0, [r0, #4]
 0x00006d16:      30 40  ands    r0, r6
+    if (reg == 0xBF)
+    {
 0x00006d18:      bf 28  cmp     r0, #191        ; 0xbf
 0x00006d1a:      01 d1  bne.n   0x6d20
+        *pNvmType = 1;
+        return 0;
+    }
 0x00006d1c:      2f 70  strb    r7, [r5, #0]
 0x00006d1e:      1b e0  b.n     0x6d58
+
 0x00006d20:      10 4f  ldr     r7, [pc, #64]   ; (0x6d64)
 0x00006d22:      3a 00  lsls    r2, r7, #0
 0x00006d24:      9f 21  movs    r1, #159        ; 0x9f
@@ -89,50 +119,11 @@ nvmErr_t NVM_Detect(nvmInterface_t nvmInterface, nvmType_t* pNvmType)
 0x00006d5a:      f8 bc  pop     {r3, r4, r5, r6, r7}
 0x00006d5c:      02 bc  pop     {r1}
 0x00006d5e:      08 47  bx      r1
+0x00006d60:      a0 27  movs    r7, #160        ; 0xa0
+0x00006d62:      00 00  lsls    r0, r0, #0
+0x00006d64:      88 0f  lsrs    r0, r1, #30
+0x00006d66:      00 00  lsls    r0, r0, #0
 
-nvmErr_t NVM_GetBaseAddr(nvmInterface_t nvmInterface, uint32_t *pBaseAddr)
-{
-0x000070c4:      31 b5  push    {r0, r4, r5, lr}
-0x000070c6:      04 00  lsls    r4, r0, #0
-0x000070c8:      0d 00  lsls    r5, r1, #0
-    // call the ROM patch function
-    RP_Vector0(0x24);    
-0x000070ca:      80 b4  push    {r7}
-0x000070cc:      18 27  movs    r7, #24
-0x000070ce:      f8 f3 a7 ff    bl      0x400020 <__iar_section$$root>
-0x000070d2:      80 bc  pop     {r7}
-    if (nvmInterface == 0)
-    {
-0x000070d4:      00 2c  cmp     r4, #0
-0x000070d6:      05 d1  bne.n   0x70e4
-        *pBaseAddr = 0x8000c000;
-        return 0;
-0x000070d8:      05 48  ldr     r0, [pc, #20]   ; (0x70f0)
-0x000070da:      28 60  str     r0, [r5, #0]
-0x000070dc:      00 20  movs    r0, #0
-0x000070de:      38 bc  pop     {r3, r4, r5}
-0x000070e0:      02 bc  pop     {r1}
-0x000070e2:      08 47  bx      r1
-    } 
-    else if (nvmInterface == 1)
-    {
-0x000070e4:      01 2c  cmp     r4, #1
-0x000070e6:      01 d1  bne.n   0x70ec
-        *pBaseAddr = 0x80002000;
-        return 0;
-    }
-0x000070e8:      02 48  ldr     r0, [pc, #8]    ; (0x70f4)
-0x000070ea:      f6 e7  b.n     0x70da
-    }
-    else
-    {
-        return 1;
-0x000070ec:      01 20  movs    r0, #1
-0x000070ee:      f6 e7  b.n     0x70de
-    }
-0x000070f0:      00 c0  stmia   r0!, {}
-0x000070f2:      00 80  strh    r0, [r0, #0]
-0x000070f4:      00 20  movs    r0, #0
-0x000070f6:      00 80  strh    r0, [r0, #0]
-
+0x00006f80:      48 30  adds    r0, #72 ; 0x48
+0x00006f82:      00 80  strh    r0, [r0, #0]
 }}}
