--- a/wiki/RomRetroEngineering.wiki
+++ b/wiki/RomRetroEngineering.wiki
@@ -9,4 +9,5 @@ Elements that were retro engineered from the ROM content:
  * functions not published in the ROM interface but that have a published name in the library file:
   * `FlashLib_Read()` : RetroFlashLib_Read
  * functions not published in the ROM interface and that have no library name (ROM address is provided and name is invented by me):
+  * `0x70a0 = NVM_Command()` : RetroNvmCommand
   * `0x70c4 = NVM_GetBaseAddr()` : RetroNvmGetBaseAddr
