--- a/wiki/RomRetroEngineering.wiki
+++ b/wiki/RomRetroEngineering.wiki
@@ -3,11 +3,13 @@
 
 Elements that were retro engineered from the ROM content:
  * Boot code : RetroBootCode
- * functions published in the ROM interface:
+ * functions published in the ROM interface reference manual:
   * `NVM_SetSVar()` : RetroNvmSetSvar
   * `NVM_Detect()` : RetroNvmDetect
- * functions not published in the ROM interface but that have a published name in the library file:
+ * functions not published in the ROM interface reference manual but that have a published name in the library file LLC.a:
   * `FlashLib_Read()` : RetroFlashLib_Read
- * functions not published in the ROM interface and that have no library name (ROM address is provided and name is invented by me):
+ * functions not published in the ROM interface reference manual but that have a published name in the library file MACPHY.a:
+  * `0xf97c =InitFromFlash()` : RetroInitFromFlash
+ * functions not published in the ROM interface reference manual and that have no library name (ROM address is provided and name is invented by me):
   * `0x70a0 = NVM_Command()` : RetroNvmCommand
   * `0x70c4 = NVM_GetBaseAddr()` : RetroNvmGetBaseAddr
