Edited wiki page through web user interface.

--- a/wiki/ArmSuite.wiki
+++ b/wiki/ArmSuite.wiki
@@ -1,4 +1,4 @@
-#summary Instructions to build the GNU compilation, linking and debugging suite for ARM
+#summary Instructions to build the GNU compilation, linking and debugging suite for ARM.
 
 The required archive files are:
  * binutils-2.19.1.tar.gz
