--- a/wiki/RetroInitFromFlash.wiki
+++ b/wiki/RetroInitFromFlash.wiki
@@ -1,11 +1,12 @@
 #summary Retro engineering InitFromFlash().
 
 {{{
-InitFromFlash()
+InitFromFlash(uint32_t nvmAddr, uint32_t xx, uint32_t xx)
 {
-    uint32_t value;
 0x0000f97c:      f7 b5  push    {r0, r1, r2, r4, r5, r6, r7, lr}
 0x0000f97e:      8a b0  sub     sp, #40 ; 0x28
+    // stack variables
+    uint32_t NvmType ; (stack+0)
     // read register CRM_STATUS_REG
     reg = REG(0x80003018)
 0x0000f980:      46 48  ldr     r0, [pc, #280]  ; (0xfa9c)
@@ -21,7 +22,9 @@ InitFromFlash()
         call 0xf8f0
 0x0000f98e:      ff f7 af ff    bl      0xf8f0
     }
-    call 6cb8(0, &value)
+    // check internal FLASH type
+    if ((NVM_Detect(0, &NvmType) != 0) ||
+         (NvmType != 0))
 0x0000f992:      69 46  mov     r1, sp
 0x0000f994:      00 20  movs    r0, #0
 0x0000f996:      f7 f7 8f f9    bl      0x6cb8
@@ -31,10 +34,17 @@ InitFromFlash()
 0x0000f9a0:      00 78  ldrb    r0, [r0, #0]
 0x0000f9a2:      00 28  cmp     r0, #0
 0x0000f9a4:      01 d1  bne.n   0xf9aa
+    {
+        return 0;
 0x0000f9a6:      00 20  movs    r0, #0
 0x0000f9a8:      72 e0  b.n     0xfa90
+    }
+
+    // unlock the last page of the NVM
+    NVM_SetSVar(0);
 0x0000f9aa:      00 20  movs    r0, #0
 0x0000f9ac:      f7 f7 6a fb    bl      0x7084
+    
 0x0000f9b0:      82 b0  sub     sp, #8
 0x0000f9b2:      08 20  movs    r0, #8
 0x0000f9b4:      00 90  str     r0, [sp, #0]
@@ -60,6 +70,5 @@ InitFromFlash()
 0x0000f9de:      80 88  ldrh    r0, [r0, #4]
 0x0000f9e0:      81 07  lsls    r1, r0, #30
 
-0x0000fa9c:      18 30  adds    r0, #24
-0x0000fa9e:      00 80  strh    r0, [r0, #0]
+0x0000fa9c:      .word 0x80003018
 }}}
