--- a/wiki/RomRetroEngineering.wiki
+++ b/wiki/RomRetroEngineering.wiki
@@ -1,7 +1,7 @@
-#summary Portions of code that were retro engineered from the ROM 2.1 .
+#summary Portions of code that were retro engineered from the ROM 2.1 and MACPHY.a library.
 #labels Phase-Implementation
 
-Elements that were retro engineered from the ROM content:
+Elements that were retro engineered from the ROM code:
  * Boot code : RetroBootCode
  * functions published in the ROM interface reference manual:
   * `0x7084 = NVM_SetSVar()` : RetroNvmSetSvar
@@ -10,6 +10,10 @@ Elements that were retro engineered from the ROM content:
   * `0xe428 = FlashLib_Read()` : RetroFlashLib_Read
  * functions not published in the ROM interface reference manual but that have a published name in the library file MACPHY.a:
   * `0xf97c = InitFromFlash()` : RetroInitFromFlash
+  * `0x109b0 = InitializeMac()` : RetroInitializeMac
  * functions not published in the ROM interface reference manual and that have no library name (ROM address is provided and name is invented by me):
   * `0x70a0 = NVM_Command()` : RetroNvmCommand
   * `0x70c4 = NVM_GetBaseAddr()` : RetroNvmGetBaseAddr
+
+Elements that were retro engineered from the MACPHY.a code:
+ * `MacPhyInit_Initialize()` : RetroMacPhyInitInitialize 
