--- a/wiki/RetroEngineering.wiki
+++ b/wiki/RetroEngineering.wiki
@@ -14,6 +14,8 @@ Elements that were retro engineered from the ROM code:
  * functions not published in the ROM interface reference manual and that have no library name (ROM address is provided and name is invented by me):
   * `0x70a0 = NVM_Command()` : RetroNvmCommand
   * `0x70c4 = NVM_GetBaseAddr()` : RetroNvmGetBaseAddr
+  * `0xf924 = IFF_Execute()` : RetroIffExecute
 
 Elements that were retro engineered from the MACPHY.a code:
- * `MacPhyInit_Initialize()` : RetroMacPhyInitInitialize 
+ * `InitializePhy()` : RetroInitializePhy
+ * `MacPhyInit_Initialize()` : RetroMacPhyInitInitialize
