--- a/wiki/RetroEngineering.wiki
+++ b/wiki/RetroEngineering.wiki
@@ -16,6 +16,9 @@ Elements that were retro engineered from the ROM code:
   * `0x70c4 = NVM_GetBaseAddr()` : RetroNvmGetBaseAddr
   * `0xf924 = IFF_Execute()` : RetroIffExecute
 
-Elements that were retro engineered from the MACPHY.a code:
- * `InitializePhy()` : RetroInitializePhy
- * `MacPhyInit_Initialize()` : RetroMacPhyInitInitialize
+Elements that were retro engineered from the MACPHY.a code, these elements where chosen because they were called during the initialization process of two examples provided with the Freescale BeeKit:
+ * from the initialization process of the "MyStarNetwork Demo (Coordinator)" (example from BeeKit MAC codebase):
+  * `InitializePhy()` : RetroInitializePhy
+  * `MacPhyInit_Initialize()` : RetroMacPhyInitInitialize
+ * from the initialization process of the "Weather Station Controller" (example from BeeKit SMAC codebase):
+  * has been done by Mariano Alvira from RedWire LLC
