--- a/wiki/Summary.wiki
+++ b/wiki/Summary.wiki
@@ -20,7 +20,7 @@ I started this project with the Freescale MC13224V kits from [http://www.redwire
 The requirements for this project are:
  * make
  * Python 2.4+
- * gcc for ARM (see [here|ArmSuite] for build instructions)
+ * gcc for ARM (see [ArmSuite here] for build instructions)
  * USB port
 
 Optional:
@@ -51,6 +51,9 @@ The structure of the project should help locate the files you are looking for:
    * MyStarNetwork Demo (Coordinator)/ : demo software from MAC codebase
    * Weather Station Controller/ : demo software from SMAC codebase
  * tools/ : set of tools (can be required or not in the build process)
+  * buildimages/ : tool that builds RAM and FLASH images from ELF for download on the chip
+  * loaduart/ : tool to communicate with chip through the UART
+  * reg_xls2h/ : tool to build the register description header files from register XLS files
 
 = Documentation =
 Most documentation should be found in the wiki pages:
