Edited wiki page through web user interface.

--- a/wiki/ArmSuite.wiki
+++ b/wiki/ArmSuite.wiki
@@ -1,12 +1,23 @@
 #summary Instructions to build the GNU compilation, linking and debugging suite for ARM.
 
-The required archive files are:
- * binutils-2.19.1.tar.gz
- * gdb-6.8.50.20090912.tar.bz2 (the 6.8 stable release does not support the ARM-THUMB automatic disassembly)
- * gmp-4.2.4.tar.bz2
- * mpfr-2.4.1.tar.bz2
- * gcc-core-4.4.0.tar.bz2
- * newlib-1.17.0.tar.gz
+Several times, I had to recompile the entire GCC for ARM suite (including the link tools, the debugger, the C library and the GCC core).  I have always used the script provided here and I updated the problems encountered at the beginning of the script.
+
+The script was tested with the following tarballs:
+ # mid-2009:
+  * binutils-2.19.1.tar.gz
+  * gdb-6.8.50.20090912.tar.bz2 (the 6.8 stable release does not support the ARM-THUMB automatic disassembly)
+  * gmp-4.2.4.tar.bz2
+  * mpfr-2.4.1.tar.bz2
+  * gcc-core-4.4.0.tar.bz2
+  * newlib-1.17.0.tar.gz
+ # beginning-2010:
+  * binutils-2.20.51.tar.bz2
+  * gdb-7.1.tar.bz2 (the 6.8 stable release does not support the ARM-THUMB automatic disassembly)
+  * gmp-4.3.2.tar.bz2
+  * mpfr-2.4.2.tar.bz2
+  * gcc-core-4.4.3.tar.bz2
+  * newlib-1.18.0.tar.gz
+
 
 The goal is to compile all the necessary tools in `/opt/arm-elf-tools/gcc-X.X.X` .
 
@@ -14,52 +25,63 @@ The script is the following:
 {{{
 #! /bin/sh
 
+# Problems encountered:
+# 1. during binutils/configure:
+#    - gcc can not build executables (ld can not find ctr0.o) -> reinstall the Cygwin base package
+# 2. during binutils compilation:
+#    - libtool: link: cannot find the library `/usr/lib/libiconv.la' or unhandled argument `/usr/lib/libiconv.la' -> install Cygwin libicvon package
+# 3. during gdb compilation:
+#    -  WARNING: no enhanced curses library found; disabling TUI -> not necessary if I dont use TUI
+#    - configure: error: no termcap library found -> install Cygwin libncurses-devel
+# 4. during gmp compilation:
+#    - checking for suitable m4... configure: error: No usable m4 in $PATH or /usr/5bin (see config.log for reasons). -> install Cygwin m4 (Interpreters)
+
+
 # Variables
-export binutils_version=2.19.1
-export gdb_version=6.8.50.20090912
-export gmp_version=4.2.4
-export mpfr_version=2.4.1
-export gcc_version=4.4.0
-export newlib_version=1.17.0
+export binutils_version=2.20.51
+export gdb_version=7.1
+export gmp_version=4.3.2
+export mpfr_version=2.4.2
+export gcc_version=4.4.3
+export newlib_version=1.18.0
 
 export srcdir=$(pwd)
 export target=arm-elf
-export prefix=/opt/arm-elf-tools/gcc-${gcc_version}
+export prefix=/cygdrive/c/arm-elf-tools/gcc-${gcc_version}
  
 export PATH="$prefix/bin":"$PATH"
 
 
 # Unpack
 
-tar xvf binutils-${binutils_version}.tar.gz
+tar xvf binutils-${binutils_version}.tar.bz2
 if [ $? -ne 0 ] ; then \
-   exit -1; \
+ # exit -1; \
 fi
 tar xvf gdb-${gdb_version}.tar.gz
 if [ $? -ne 0 ] ; then \
-   exit -1; \
+ # exit -1; \
 fi
 tar xvf gmp-${gmp_version}.tar.bz2
 if [ $? -ne 0 ] ; then \
-   exit -1; \
+ # exit -1; \
 fi
 tar xvf mpfr-${mpfr_version}.tar.bz2
 if [ $? -ne 0 ] ; then \
-   exit -1; \
+ # exit -1; \
 fi
 tar xvf gcc-core-${gcc_version}.tar.bz2
 if [ $? -ne 0 ] ; then \
-   exit -1; \
+ # exit -1; \
 fi
 tar xvf newlib-${newlib_version}.tar.gz
 if [ $? -ne 0 ] ; then \
-   exit -1; \
+ # exit -1; \
 fi
 
 # here, eventually, replace the multilib support description file 
 #cp -f t-arm-elf gcc-${gcc_version}/gcc/config/arm
 
-languages
 # Build directory
 mkdir -p $prefix
 
@@ -80,7 +102,7 @@ fi
 # gdb (no dependency)
 cd $srcdir
 mkdir build-gdb
-cd build-gdb
+ cd build-gdb
 ${srcdir}/gdb-${gdb_version}/configure \
         --target=$target --prefix=$prefix \
         --enable-interwork --enable-multilib --with-float=soft
@@ -95,12 +117,12 @@ fi
 # gmp (no dependency)
 cd $srcdir
 mkdir build-gmp
-cd build-gmp
+ cd build-gmp
 ${srcdir}/gmp-${gmp_version}/configure --prefix=$srcdir/build-gmp
 if [ $? -ne 0 ] ; then \
    exit -1; \
 fi
-make 
+make
 if [ $? -ne 0 ] ; then \
    exit -1; \
 fi
