Edited wiki page QuickStartupGuide through web user interface.

--- a/wiki/QuickStartupGuide.wiki
+++ b/wiki/QuickStartupGuide.wiki
@@ -10,16 +10,16 @@ Steps to quickly start up on the MC13224V using this project.
   * open a terminal (Cygwin under Windows)
   * download the project locally
   * edit the file scripts/build/Makefile to update:
-  ** the GCC and LD locations (should be GCC for ARM processors)
-  ** the LOAD_FLAGS -c option which indicates the com port number on which the !RedBee module enumerated
+    * the GCC and LD locations (should be GCC for ARM processors)
+    * the LOAD_FLAGS -c option which indicates the com port number on which the !RedBee module enumerated
   * clean a sample application (gen_pattern):
-  ** make gen_pattern_clean
+    * {{{make gen_pattern_clean}}}
   * build a sample application (gen_pattern):
-  ** make gen_pattern
+    * make gen_pattern
   * run a sample application (gen_pattern):
-  ** make gen_pattern_install
-  ** follow the instructions
+    * make gen_pattern_install
+    * follow the instructions
   * flash the sample application in the module embedded flash (gen_pattern):
-  ** make gen_pattern_flash
+    * make gen_pattern_flash
   * erase the module embedded flash:
-  ** set the S2 switch 1-OFF, 2-ON (S2 is labled ERASE on the !RedBee module)
+    * set the S2 switch 1-OFF, 2-ON (S2 is labled ERASE on the !RedBee module)
