--- a/wiki/QuickStartupGuide.wiki
+++ b/wiki/QuickStartupGuide.wiki
@@ -15,11 +15,11 @@ Steps to quickly start up on the MC13224V using this project.
   * clean a sample application (gen_pattern):
     * {{{make gen_pattern_clean}}}
   * build a sample application (gen_pattern):
-    * make gen_pattern
+    * {{{make gen_pattern}}}
   * run a sample application (gen_pattern):
-    * make gen_pattern_install
+    * {{{make gen_pattern_install}}}
     * follow the instructions
   * flash the sample application in the module embedded flash (gen_pattern):
-    * make gen_pattern_flash
+    * {{{make gen_pattern_flash}}}
   * erase the module embedded flash:
     * set the S2 switch 1-OFF, 2-ON (S2 is labled ERASE on the !RedBee module)
